# jzo

./: CMakeLists.txt  README.md
01_AssignmentOperator/: CMakeLists.txt
01_AssignmentOperator/bash/: build_macOS_x86.sh
01_AssignmentOperator/src/: AssignmentOperator.cpp  AssignmentOperator.h  CMakeLists.txt  valid.cpp  valid.h
01_AssignmentOperator/test/: CMakeLists.txt  main.cpp  main1.cpp
02_Singleton/: CMakeLists.txt  README.md
02_Singleton/bash/: build_macOS_x86.sh
02_Singleton/src/: CMakeLists.txt  SingleCpp11.cpp  SingletonTraditional.cpp  singleton.cpp  singleton.h
02_Singleton/test/: main.cpp
03_current_next_value/: CMakeLists.txt  cn_value.cpp
04_reverse_words/: CMakeLists.txt
04_reverse_words/bash/: build_android_aarch64.sh  build_linux_x86.sh  build_macOS_x86.sh
04_reverse_words/build_macOS_x86/macOS-release/: CMakeCache.txt  Makefile  cmake_install.cmake
04_reverse_words/build_macOS_x86/macOS-release/src/: Makefile  cmake_install.cmake
04_reverse_words/build_macOS_x86/macOS-release/test/: Makefile  cmake_install.cmake  reverse_w
04_reverse_words/src/: CMakeLists.txt  reverse_words.cpp  reverse_words.h
04_reverse_words/test/: CMakeLists.txt  main.cpp
05_PrintListInReversedOrder/: CMakeLists.txt
05_PrintListInReversedOrder/src/: CMakeLists.txt  print_link_head2tail.cpp  print_link_head2tail.h
05_PrintListInReversedOrder/test/: CMakeLists.txt  main.cpp
bash/: build_macOS_x86.sh
common/: list.h
